* Use static c++ runtime link for windows.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,3 +98,6 @@ target_link_libraries(${PROJECT_NAME} PRIVATE ${LINK_OPT_EXTRA})
 
 add_library(${PROJECT_NAME}_STATIC ${SRC} ${HEADER_FILES})
 target_link_libraries(${PROJECT_NAME}_STATIC PRIVATE ${LINK_OPT_EXTRA})
+if(WIN32)
+    set_property(TARGET ${PROJECT_NAME}_STATIC PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:${CMAKE_BUILD_TYPE}>:${CMAKE_BUILD_TYPE}>")
+endif(WIN32)
